# Physical-AI-Humanoid-Robotics-Textbook

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  GIT_WORKFLOW.md  README.md  docusaurus.config.ts  main.py  package-lock.json  package.json  prompt_history.md  pyproject.toml
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
apps/api/: main.py
apps/web/: docusaurus.config.ts  package.json  (+1 more)
auth-service/: package-lock.json  package.json  tsconfig.json
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/api/: auth.py  chat.py  chatkit_routes.py  deps.py  ingest.py  query.py
backend/schemas/: profile.py
backend/scripts/: Readme.md  check_connection.py  create_user_profiles.py  debug_deployment.py  debug_rag.py  ingest-content.py  init_chat_db.py  init_db.py  test_chat_stream.py  validate_retrieval.py
backend/scripts/debug/: check_data.py  list_tables.py
backend/services/: chatkit_postgres_store.py  chatkit_store.py  db.py
backend/services/embeddings/: client.py
backend/services/ingest/: manager.py  sitemap.py
backend/services/llm/: agent.py  factory.py
backend/services/query/: retrieval.py
backend/services/vector_store/: client.py
backend/tests/: test_chat_api.py  test_rag_agent.py
backend/tests/unit/: test_sitemap.py
content/: Physical AI & Humanoid Robotics Textbook.md  latest_constitution.md
frontend/: .markdownlint.json  CONTRIBUTING.md  docusaurus.config.ts  package-lock.json  package.json
scripts/: ingest-content.py  init_db.py  test_chat_stream.py  validate_retrieval.py
services/: config.py
(+214 files in other folders)
